@@ -1,5 +1,9 @@
 2005-01-13  Miklos Szeredi <miklos@szeredi.hu>
 
+	* fusermount: improve parsing of /etc/fuse.conf
+
+2005-01-13  Miklos Szeredi <miklos@szeredi.hu>
+
 	* Remove 'mount_max' and 'user_allow_other' module options.  These
 	are now checked by fusermount, and can be set in /etc/fuse.conf
 
